...
    }
  };

  return (
    <RatsScrollView
      contentContainerStyle={styles.container}
      testID="guest-overview-screen"
    >
      {/******************************* HEADER *******************************/}
      <ScreenHeader
        header={firstName + (lastName ? " " + lastName[0] + "." : "")}
        icon={
          <ClickableIcon
...
        "job-status-card"
      )}
      {renderStatSection(
        "choreCompleted",
        "completed",
        undefined,
        "chores-card"
      )}
      {renderStatSection(
        "metPrimarySupporter",
        "",
        `Step ${currentGuest!.step || 1}. ${
          getStatValue("metPrimarySupporter")
...
