...
            component={HouseSummary}
            options={{ tabBarButtonTestID: 'house-tab' }}
          />
          <MainTab.Screen
            name={Routes.Guest}
            component={GuestHome}
            options={{ tabBarButtonTestID: 'guest-tab' }}
          />
          <MainTab.Screen
            name={Routes.Activities}
            component={ActivityScreen}
            options={{ tabBarButtonTestID: 'activities-tab' }}
          />
...
