...
      weekSummary?.stats,
    ),
  );

  return (
    <Section
      testID="guest-list-item"
      forceAvatar
      avatar={guest.avatar}
      name={guest.firstName + " " + guest.lastName}
      description={getDateAndTime(
        guest.createdAt ?? guest.createdDate ?? new Date(),
        false,
...
    );
  }

  // Main render
  return (
    <FlatList
      testID="guest-list-screen"
      data={guests}
      renderItem={renderGuestItem}
      keyExtractor={keyExtractor}
      contentContainerStyle={styles.container}
      keyboardShouldPersistTaps="always"
      showsVerticalScrollIndicator={false}
...
