...
            </TouchableOpacity>

            <TouchableOpacity
              style={styles.approveBtn}
              onPress={handleApprove}
              disabled={updateMutation.isPending}
              testID="btn-approve">
              {updateMutation.isPending ? (
                <ActivityIndicator color={color.white} size="small" />
              ) : (
                <Text style={styles.approveBtnText}>
                  Approve &amp; Begin Intake
                </Text>
...
