...

  const filteredActivities = activityScreen.filterActivitiesByType('all', true);

  return (
    <View
      style={{ flex: 1, backgroundColor: color.light_grey }}
      testID="disputes-screen">
      <RenderModal
        modalVisible={activityScreen.modalVisible}
        modalType={activityScreen.modalType}
        selectedActivity={activityScreen.selectedActivity}
        guests={guests}
        getIconForActivity={activityScreen.getIconForActivity}
...
